<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_dreams"
            android:icon="@drawable/ic_menu_label_solid"
            android:title="@string/nav_all_dream" />
        <item
            android:id="@+id/nav_active_dreams"
            android:icon="@drawable/ic_menu_label_outline"
            android:title="@string/nav_active_dreams" />

        <item
            android:id="@+id/nav_realized_dreams"
            android:icon="@drawable/ic_menu_label_outline"
            android:title="@string/nav_realized_dreams" />

        <item
            android:id="@+id/nav_deferred_dreams"
            android:icon="@drawable/ic_menu_label_outline"
            android:title="@string/nav_deferred_dreams" />

    </group>
</menu>