<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CE7C03"
        android:contentDescription="@string/app_name"
        android:paddingStart="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:scaleType="center"
        android:singleLine="false"
        android:text="@string/new_comment"
        android:textAlignment="viewStart"
        android:textColor="#F5F6F6"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/comment_text"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/comment"
        android:autofillHints="" />
</LinearLayout>