<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/dream_photo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:background="@android:color/darker_gray"
        android:cropToPadding="true"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@android:color/background_light"/>

    <TextView
        android:id="@+id/dream_tile_label"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/dream_title_label"
        app:layout_constraintBottom_toTopOf="@id/dream_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dream_photo"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dream_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:hint="@string/dream_title_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/dream_realized"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dream_photo"
        app:layout_constraintTop_toBottomOf="@+id/dream_tile_label" />

    <CheckBox
        android:id="@+id/dream_realized"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:checked="false"
        android:text="@string/dream_realized_label"
        app:layout_constraintStart_toEndOf="@id/dream_photo"
        app:layout_constraintTop_toBottomOf="@+id/dream_title" />

    <CheckBox
        android:id="@+id/dream_deferred"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:checked="false"
        android:text="@string/dream_deferred_label"
        app:layout_constraintStart_toEndOf="@id/dream_photo"
        app:layout_constraintTop_toBottomOf="@+id/dream_realized" />

    <ImageView
        android:id="@+id/dream_fragment_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/dream_deferred"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toBottomOf="@id/dream_title"
        app:srcCompat="@drawable/dream_realized_icon" />

    <TextView
        android:id="@+id/dream_details_label"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dream_details_label"
        app:layout_constraintEnd_toEndOf="@id/dream_deferred"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/dream_entry_recycler_view"
        app:layout_constraintTop_toBottomOf="@id/dream_deferred" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dream_entry_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintTop_toBottomOf="@id/dream_details_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

         />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_comment_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="#6fe381"
        app:srcCompat="@drawable/ic_add_solid" />


</androidx.constraintlayout.widget.ConstraintLayout>